UI last details updated

--- a/src/sections/about/FoodTruck.astro
+++ b/src/sections/about/FoodTruck.astro
@@ -6,7 +6,7 @@ import foodtruck from "../../assets/gallery/foodtruck.png";
 import founders from "../../assets/gallery/chinacata-founders.png";
 ---
 
-<section class="section-full py-20 bg-lavender-blush">
+<section class="section-full py-20 bg-french-rose-50">
   <article
     class:list={["section", "grid grid-cols-1 lg:grid-cols-2", "gap-10"]}
   >
@@ -45,8 +45,9 @@ import founders from "../../assets/gallery/chinacata-founders.png";
     <header
       class:list={[
         "flex flex-col items-center",
-        "space-y-6",
-        "[&_p]:text-center [&_p]:text-pretty",
+        "[&_p]:mx-auto [&_p]:mt-4",
+        "space-y-4",
+        "[&_p]:text-lg [&_p]:text-center [&_p]:text-pretty",
         "[&_p]:font-extralight [&_p]:text-green-leaf-900",
       ]}
     >
@@ -66,19 +67,18 @@ import founders from "../../assets/gallery/chinacata-founders.png";
         alt="Flowers garland"
         class:list={["object-contain", "place-self-center", "h-16 md:h-24"]}
       />
-      <p class:list={["text-lg", "mx-auto", "mt-4"]}>
-        La Chinacata nació de la pasión de nuestra fundadora, Rocío Reyna, quien
-        decidió llevar el sabor casero a las calles de California a través de
-        una encantadora food truck decorada como una típica casita mexicana en
-        vibrantes colores.
+      <p>
+        La Chinacata was born from the passion of our founder, Rocío Reyna, who
+        decided to bring homemade flavors to the streets of California through a
+        charming food truck decorated like a typical Mexican house in vibrant
+        colors.
       </p>
-
-      <p class:list={["text-lg", "mx-auto", "mt-4"]}>
-        Desde nuestros humildes comienzos, hemos deleitado a nuestros clientes
-        con platillos tradicionales que evocan recuerdos familiares y
-        celebraciones. La Chinacata ha crecido, pero nuestra misión sigue siendo
-        la misma: ofrecer el auténtico sabor de casa en cada evento, llevando
-        alegría y tradición a cada rincón.
+      <p>
+        From our humble beginnings, we have delighted our customers with
+        traditional dishes that evoke family memories and celebrations. La
+        Chinacata has grown, but our mission remains the same: to offer the
+        authentic taste of home at every event, bringing joy and tradition to
+        every corner.
       </p>
     </header>
   </article>
