UI's last details updated

--- a/src/sections/home/Celebrations.astro
+++ b/src/sections/home/Celebrations.astro
@@ -53,24 +53,26 @@ const menus = [
       "flex flex-col",
       "mx-auto",
       "max-w-2xl",
-      "pb-4",
+      "space-y-4",
       "text-center",
       "[&_p]:font-sans [&_p]:font-extralight [&_p]:text-lg [&_p]:text-green-leaf-900",
     ]}
   >
     <h2
       class:list={[
-        "pb-8",
+        "pb-6",
         "font-serif text-heading-sm md:text-heading-lg text-french-rose-400",
       ]}
     >
-      Homemade flavor for unforgettable celebrations
+      Memorable <br />& custom <br />design catering
     </h2>
-    <p class="pb-4">
+    <p>
       We bring family tradition to your table with homemade recipes made with
       fresh, high-quality ingredients.
     </p>
-    <p>We offer a variety of menus to satisfy all tastes and occasions.</p>
+    <p class="pb-6">
+      We offer a variety of menus to satisfy all tastes and occasions.
+    </p>
   </header>
   <div
     class:list={[
