--- a/src/sections/home/Flavors.astro
+++ b/src/sections/home/Flavors.astro
@@ -27,18 +27,16 @@ const images = [
 ];
 ---
 
-<section class="section">
-  <main class="flex flex-col gap-8">
+<section class="section-full py-20 bg-french-rose-50">
+  <main class="section flex flex-col gap-10">
     <header
       class:list={[
-        "flex flex-col gap-7",
-        "text-center",
-        "[&_p]:text-center [&_p]:text-lg",
-        "font-extralight text-green-leaf-900",
+        "space-y-4",
+        "[&_p]:text-lg text-center font-extralight text-green-leaf-900",
       ]}
     >
       <h2
-        class="font-serif font-medium text-heading-sm md:text-heading-lg text-french-rose-400"
+        class="pb-6 font-serif font-medium text-heading-sm md:text-heading-lg text-french-rose-400"
       >
         Flavors that inspire
       </h2>
