env variable added

--- a/src/sections/home/Clients.astro
+++ b/src/sections/home/Clients.astro
@@ -16,6 +16,12 @@ const reviews = [
       "Everything was delicious and so special! Thank you for sharing and doing such an amazing job at our baby shower 🥰🙏🏼😊",
     image: karen,
   },
+  {
+    name: "Karen",
+    review:
+      "Everything was delicious and so special! Thank you for sharing and doing such an amazing job at our baby shower 🥰🙏🏼😊",
+    image: luis,
+  },
 ];
 ---
 
