--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,9 @@ import FoodTruck from "../sections/about/FoodTruck.astro";
 import History from "../sections/about/History.astro";
 ---
 
-<Layout title="About us">
+<Layout
+  title="About La Chinacata - Family Tradition and Fresh Flavors | Catering services | Local catering"
+>
   <Hero />
   <Intro />
   <FoodTruck />
