--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -4,7 +4,9 @@ import Hero from "../sections/gallery/Hero.astro";
 import Flavors from "../sections/gallery/Flavors.astro";
 ---
 
-<Layout title="Gallery">
+<Layout
+  title="La Chinacata - Professional Catering for Weddings, Parties, Corporate and more | Full-service catering"
+>
   <Hero />
   <Flavors />
 </Layout>
