--- a/src/pages/get-in-touch.astro
+++ b/src/pages/get-in-touch.astro
@@ -4,7 +4,9 @@ import Hero from "../sections/get-in-touch/Hero.astro";
 import ContactForm from "../sections/get-in-touch/contact-form.astro";
 ---
 
-<Layout title="">
+<Layout
+  title="Contact La Chinacata - Get in Touch for Customizable Catering Menus and Event Services | Catering packages"
+>
   <Hero />
   <ContactForm />
 </Layout>
