--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,9 @@ import Flavors from "../sections/home/Flavors.astro";
 import Clients from "../sections/home/Clients.astro";
 ---
 
-<Layout title="">
+<Layout
+  title="La Chinacata - Exceptional Catering for Weddings, Corporate Events, and More | Professional caterers"
+>
   <Hero />
   <Events />
   <Celebrations />
