update meta image

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ const { class: className, title } = Astro.props;
       property="og:description"
       content="La Chinacata offers exceptional catering services for weddings, corporate events, and parties in California. Customizable menus with fresh, homemade dishes."
     />
-    <meta property="og:image" content="/la-chinacata-logo.png" />
+    <meta property="og:image" content="/brunch.png" />
     <meta property="og:url" content="https://www.chinacata-reyna.com/" />
     <meta property="og:type" content="website" />
   </head>
