--- a/src/sections/get-in-touch/Hero.astro
+++ b/src/sections/get-in-touch/Hero.astro
@@ -15,7 +15,7 @@
   >
     <h1
       class:list={[
-        "absolute top-1/2 2xl:top-1/3",
+        "absolute top-1/2",
         "mb-4",
         "max-w-96 lg:max-w-xl",
         "px-1 sm:px-4",
